bridge/base/0-mission-4-mrk1-namespace.yaml
#! 0-mission-4-mrk1-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: mission-4-mrk1
    labels:
        com.docker.compose.project: mission-4-mrk1
