bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: mission-4-mrk1
    labels:
        com.docker.compose.project: mission-4-mrk1
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: mission-4-mrk1
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: mission-4-mrk1
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: frontend
                  image: mission-4-mrk1-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-80
                      containerPort: 80
