bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: mission-4-mrk1
    labels:
        com.docker.compose.project: mission-4-mrk1
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: mission-4-mrk1
        com.docker.compose.service: backend
    ports:
        - name: backend-5000
          port: 5000
          targetPort: backend-5000
